--- a/src/components/MovieList/style.css
+++ b/src/components/MovieList/style.css
@@ -6,6 +6,7 @@ body{
     grid-template-columns: repeat(4 ,1fr);
     gap: 2%;
 }
+
 .images{
     width: 90%;
     overflow: hidden;
@@ -63,6 +64,7 @@ img{
     background-color: white;
     margin-bottom: 3%;
     display: flex;
+    color: black;
 
 }
 .topim{
